# dz_25_1

./: .env  .env sample  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_course_owner_alter_lesson_owner_and_more.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: load_payments.py
users/migrations/: 0001_initial.py
