[tool.poetry]
name = "dz-24-2"
version = "0.1.0"
description = ""
authors = ["Maxim Poverenov <poverenov.92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
phonenumbers = "^8.13.45"
django-countries = "^7.6.1"
django-phonenumber-field = "^8.0.0"
rest-framework-simplejwt = "^0.0.2"
django-filter = "^24.3"
ipython = "^8.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
